@@ -1,5 +1,10 @@
 2017-07-28  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
 
+	* rtl.c (shallow_copy_rtx_stat): Remove _stat from name.
+	* rtl.h (shallow_copy_rtx): Remove macro.
+
+2017-07-28  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
+
 	* emit-rtl.c (gen_raw_REG): Adjust.
 	* gengenrtl.c (gendef): Likewise.
 	* rtl.c (rtx_alloc_stat): Remove _stat from name.
